--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,33 @@
-.App {
-  text-align: center;
+html {
+  font-size: 12px;
+  font-family: -apple-system,system-ui,BlinkMacSystemFont,Helvetica Neue,PingFang SC,Hiragino Sans GB,Microsoft YaHei,Arial,sans-serif;
+  text-rendering: optimizeLegibility;
+  color: #333;
+  background-color: #f4f5f5;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+a{
+  text-decoration: none;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+li{
+  list-style: none;
 }
-
-.App-link {
-  color: #61dafb;
+.article-area {
+  margin-bottom: 1.5rem;
+  padding: 0 2rem;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.article-content pre{
+  line-height: 1.75;
+}
+.article-content h4{
+  color: #333;
+  line-height: 1.5;
+  margin-top: 35px;
+  margin-bottom: 10px;
+  padding-bottom: 5px;
+}
+.article-content h4{
+  font-size: 16px;
+}
+.article-content code, .article-content pre {
+  font-family: Menlo,Monaco,Consolas,Courier New,monospace;
 }
